[package]
name = "zetmemo_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.16", features = ["env", "derive"] }
futures-util = { version = "0.3.30", features = ["sink"] }
object_store = { version = "0.11.0", features = ["aws"] }
reqwest = { version = "0.12.7", features = ["json"] }
serde_json = "1.0.125"
teloxide = { version = "0.13.0" }
tokio = { version = "1.39.3", features = ["full"] }
tracing = { version = "0.1.40", features = ["log-always"] }
tracing-subscriber = { version = "0.3.18", features = ["ansi"] }
